--- a/styles/match.css
+++ b/styles/match.css
@@ -28,6 +28,7 @@
  @media only screen and (max-width: 688px) {
     .matches {
             grid-template-columns: repeat(1, 1fr);
+            margin-left: 0;
     }
  }
 
@@ -35,5 +36,7 @@
  @media only screen and (min-width: 688px) and (max-width: 992px) {
     .matches {
             grid-template-columns: repeat(2, 1fr);
+            margin-left: 0;
      }
+    
  }
